--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - automake
     - gettext
   host:
-    - libassuan >=3.0.1,<4
+    - libassuan ==3.0.1
   run:
     - libassuan >=3.0.1,<4
     - libgpg-error >=1.42,<2
