--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - automake
     - gettext
   host:
-    - libassuan ==3.0.1
+    - libassuan 3.0.1
   run:
     - libassuan >=3.0.1,<4
     - libgpg-error >=1.42,<2
