--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,10 @@ requirements:
   run:
     - libassuan >=3.0.1,<4
     - libgpg-error >=1.42,<2
+
+  test:
+    commands:
+      pinentry --help
     
 about:
   home: https://www.gnupg.org/related_software/pinentry/index.html
